Bug 538028 - nsIAlertsService::showAlertNotification with null title shows short (1px tall) alerts on Linux. r=roc